@@ -104,11 +104,11 @@
 			<label index="email_confirmationOnUnregistrationHello_formal">hereby, we confirm your unregistration from the event &quot;%s&quot;</label>
 			<label index="email_confirmationOnUnregistrationHello_informal">hereby, we confirm your unregistration from the event &quot;%s&quot;</label>
 			<label index="email_confirmationOnRegistrationForQueueSubject">Registration for the waiting list confirmation</label>
-			<label index="email_confirmationOnRegistrationForQueueHello_formal">thank you for registering for the waiting list of this event:</label>
-			<label index="email_confirmationOnRegistrationForQueueHello_informal">thank you for registering for the waiting list of this event:</label>
+			<label index="email_confirmationOnRegistrationForQueueHello_formal">thank you for registering for the waiting list of the event &quot;%s&quot;</label>
+			<label index="email_confirmationOnRegistrationForQueueHello_informal">thank you for registering for the waiting list of the event &quot;%s&quot;</label>
 			<label index="email_confirmationOnQueueUpdateSubject">Registration became a regular registration confirmation</label>
-			<label index="email_confirmationOnQueueUpdateHello_formal">your registration just has become a regular registration of this event:</label>
-			<label index="email_confirmationOnQueueUpdateHello_informal">your registration just has become a regular registration of this event:</label>
+			<label index="email_confirmationOnQueueUpdateHello_formal">your registration just has become a regular registration for the event &quot;%s&quot;</label>
+			<label index="email_confirmationOnQueueUpdateHello_informal">your registration just has become a regular registration for the event &quot;%s&quot;</label>
 			<label index="email_additionalNotificationEnoughRegistrations">Your event has now enough registrations to be held.</label>
 			<label index="email_additionalNotificationEnoughRegistrationsSubject">Event has enough registrations: %d - %s</label>
 			<label index="email_additionalNotificationIsFull">Your event is full, there are no empty seats left.</label>
@@ -342,11 +342,11 @@ En persons tilmelding blev lige til en almindelig tilmelding til arrangementet:<
 			<label index="email_confirmationOnUnregistrationHello_formal">hiermit bestätigen wir Ihre Abmeldung von der Veranstaltung &quot;%s&quot;</label>
 			<label index="email_confirmationOnUnregistrationHello_informal">hiermit bestätigen wir deine Abmeldung von der Veranstaltung &quot;%s&quot;</label>
 			<label index="email_confirmationOnRegistrationForQueueSubject">Anmeldebestätigung für die Warteliste</label>
-			<label index="email_confirmationOnRegistrationForQueueHello_formal">vielen Dank für Ihre Anmeldung für die Warteliste von dieser Veranstaltung:</label>
-			<label index="email_confirmationOnRegistrationForQueueHello_informal">vielen Dank für deine Anmeldung für die Warteliste von dieser Veranstaltung:</label>
+			<label index="email_confirmationOnRegistrationForQueueHello_formal">vielen Dank für Ihre Anmeldung für die Warteliste der Veranstaltung &quot;%s&quot;</label>
+			<label index="email_confirmationOnRegistrationForQueueHello_informal">vielen Dank für deine Anmeldung für die Warteliste der Veranstaltung &quot;%s&quot;</label>
 			<label index="email_confirmationOnQueueUpdateSubject">Bestätigung: Anmeldung wurde zu regulärer Anmeldung</label>
-			<label index="email_confirmationOnQueueUpdateHello_formal">Ihre Anmeldung wurde gerade zu einer regulären Anmeldung von dieser Veranstaltung:</label>
-			<label index="email_confirmationOnQueueUpdateHello_informal">deine Anmeldung wurde gerade zu einer regulären Anmeldung von dieser Veranstaltung:</label>
+			<label index="email_confirmationOnQueueUpdateHello_formal">Ihre Anmeldung wurde gerade zu einer regulären Anmeldung der Veranstaltung &quot;%s&quot;</label>
+			<label index="email_confirmationOnQueueUpdateHello_informal">deine Anmeldung wurde gerade zu einer regulären Anmeldung der Veranstaltung &quot;%s&quot;</label>
 			<label index="email_additionalNotificationEnoughRegistrations">Folgende Veranstaltung hat nun genug Anmeldungen, um durchgeführt zu werden.</label>
 			<label index="email_additionalNotificationEnoughRegistrationsSubject">Veranstaltung hat genug Anmeldungen: %d - %s</label>
 			<label index="email_additionalNotificationIsFull">Folgende Veranstaltung ist nun komplett ausgebucht (keine freien Plätze mehr).</label>
@@ -992,11 +992,11 @@ Une inscription vient d'être régularisée pour l'événement suivant:</label>
 			<label index="email_confirmationOnUnregistrationHello_formal" type="integer">225736015</label>
 			<label index="email_confirmationOnUnregistrationHello_informal" type="integer">225736015</label>
 			<label index="email_confirmationOnRegistrationForQueueSubject" type="integer">245357554</label>
-			<label index="email_confirmationOnRegistrationForQueueHello_formal" type="integer">54068632</label>
-			<label index="email_confirmationOnRegistrationForQueueHello_informal" type="integer">54068632</label>
+			<label index="email_confirmationOnRegistrationForQueueHello_formal" type="integer">201582578</label>
+			<label index="email_confirmationOnRegistrationForQueueHello_informal" type="integer">201582578</label>
 			<label index="email_confirmationOnQueueUpdateSubject" type="integer">141930955</label>
-			<label index="email_confirmationOnQueueUpdateHello_formal" type="integer">110704185</label>
-			<label index="email_confirmationOnQueueUpdateHello_informal" type="integer">110704185</label>
+			<label index="email_confirmationOnQueueUpdateHello_formal" type="integer">43196046</label>
+			<label index="email_confirmationOnQueueUpdateHello_informal" type="integer">43196046</label>
 			<label index="email_additionalNotificationSubject" type="integer">75541883</label>
 			<label index="email_additionalNotificationEnoughRegistrations" type="integer">40292240</label>
 			<label index="email_additionalNotificationIsFull" type="integer">125053794</label>
@@ -1516,11 +1516,11 @@ Une inscription vient d'être régularisée pour l'événement suivant:</label>
 			<label index="email_confirmationOnUnregistrationHello_formal">hereby, we confirm your unregistration from the event &quot;%s&quot;</label>
 			<label index="email_confirmationOnUnregistrationHello_informal">hereby, we confirm your unregistration from the event &quot;%s&quot;</label>
 			<label index="email_confirmationOnRegistrationForQueueSubject">Registration for the waiting list confirmation</label>
-			<label index="email_confirmationOnRegistrationForQueueHello_formal">thank you for registering for the waiting list of this event:</label>
-			<label index="email_confirmationOnRegistrationForQueueHello_informal">thank you for registering for the waiting list of this event:</label>
+			<label index="email_confirmationOnRegistrationForQueueHello_formal">thank you for registering for the waiting list of the event &quot;%s&quot;</label>
+			<label index="email_confirmationOnRegistrationForQueueHello_informal">thank you for registering for the waiting list of the event &quot;%s&quot;</label>
 			<label index="email_confirmationOnQueueUpdateSubject">Registration became a regular registration confirmation</label>
-			<label index="email_confirmationOnQueueUpdateHello_formal">your registration just has become a regular registration of this event:</label>
-			<label index="email_confirmationOnQueueUpdateHello_informal">your registration just has become a regular registration of this event:</label>
+			<label index="email_confirmationOnQueueUpdateHello_formal">your registration just has become a regular registration for the event &quot;%s&quot;</label>
+			<label index="email_confirmationOnQueueUpdateHello_informal">your registration just has become a regular registration for the event &quot;%s&quot;</label>
 			<label index="email_additionalNotificationEnoughRegistrations">Your event has now enough registrations to be held.</label>
 			<label index="email_additionalNotificationEnoughRegistrationsSubject">Event has enough registrations: %d - %s</label>
 			<label index="email_additionalNotificationIsFull">Your event is full, there are no empty seats left.</label>
