@@ -1,4 +1,5 @@
 0.9.0 (currently working on)
+- [#3562] Feature: Also mention event title, date and time in the other notification mails
 - [#3579] Feature: In the cancel/confirm texts, insert the title, date and time of the event
 - [#3576] Feature: Mention the event title, date, time and price in the thank-you and unregistration e-mail
 - [#3640] Fix: The message about the UID is red
